--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 <div class="big-img intro-header">
   <div class="container-md">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
+      <div class="{% if page.full-width %} col-12 {% elsif page.narrow %} col-6 offset-3 {% else %} col-xl-8 offset-xl-2 col-lg-10 offset-lg-1 {% endif %}">
         <div class="{{ include.type }}-heading">
           <h1>{% if page.title %}{{ page.title | strip_html }}{% else %}<br/>{% endif %}</h1>
           {% if page.subtitle %}
@@ -59,7 +59,7 @@
 <div class="intro-header no-img">
   <div class="container-md">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
+      <div class="{% if page.full-width %} col-12 {% elsif page.narrow %} col-6 offset-3 {% else %} col-xl-8 offset-xl-2 col-lg-10 offset-lg-1 {% endif %}">
         <div class="{{ include.type }}-heading">
           <h1>{% if page.title %}{{ page.title | strip_html }}{% else %}<br/>{% endif %}</h1>
           {% if page.subtitle %}
