--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,6 +77,7 @@ layout: base
         {% endif %}
       </ul>
       {% include comments.html %}
+      {% include iframe-resizer.html %}
     </div>
   </div>
 </div>
